[package]
name = "runh"
authors = [
    "Stefan Lankes <slankes@eonerc.rwth-aachen>",
    "Jonas Schroeder <jonas.schroeder1@rwth-aachen>",
]
license = "MIT/Apache-2.0"
version = "0.1.0"
keywords = ["oci", "container", "unikernel"]
categories = ["operating system", "container", "virtualization"]
readme = "README.md"
edition = "2018"
description = "runh is a CLI tool for spawning and running RustyHermit containers."

[dependencies]
capctl = "0.2"
clap = { version = "4", features = ["wrap_help", "derive", "color", "cargo", "suggestions"] }
colour = "0.7"
command-fds = "0.2"
futures = "0.3"
getset = "0.1"
goblin = { version = "0.7", default-features = false, features = ["elf64", "elf32", "endian_fd"] }
libc = "0.2"
log = { version = "0.4", features = ["std"] }
netlink-packet-core = "0.7"
netlink-packet-route = "0.17"
nix = "0.26"
oci-spec = "0.6"
path-clean = "1.0"
procfs = { version = "0.15", default-features = false }
rtnetlink = "0.13"
serde_json = "1.0"
serde = "1.0"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.32", features = ["full"] }
