[package]
name = "runh"
authors = [
    "Stefan Lankes <slankes@eonerc.rwth-aachen>",
    "Jonas Schroeder <jonas.schroeder1@rwth-aachen>",
]
license = "MIT/Apache-2.0"
version = "0.1.0"
keywords = ["oci", "container", "unikernel"]
categories = ["operating system", "container", "virtualization"]
readme = "README.md"
edition = "2018"
description = "runh is a CLI tool for spawning and running Hermit OS containers."

[dependencies]
capctl = "0.2"
clap = { version = "4", features = ["wrap_help", "derive", "color", "cargo", "suggestions"] }
colour = "2.1"
command-fds = "0.3"
futures = "0.3"
getset = "0.1"
goblin = { version = "0.10", default-features = false, features = ["elf64", "elf32", "endian_fd"] }
libc = "0.2"
log = { version = "0.4", features = ["std"] }
netlink-packet-core = "0.7"
netlink-packet-route = "0.19"
nix = { version = "0.29", features = [
    "hostname",
    "ioctl",
    "mount", 
    "sched",
    "socket",
    "term",
    "ucontext",
    "user",
    "zerocopy",
] }
toml = "1"
oci-spec = "0.8"
path-clean = "1.0"
procfs = { version = "0.18", default-features = false }
rtnetlink = "0.14"
serde_json = "1.0"
serde = "1.0"
time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.49", features = ["full"] }
